--- a/mainMenu/mainMenu.phtml
+++ b/mainMenu/mainMenu.phtml
@@ -49,7 +49,7 @@
 					</p>
 				</div>
 				<div class="userInfo float-right">
-					<p><a href="../login/login.php">ログアウト</a></p>
+					<p><a href="../login/login.php?execute=logout" id="logoutLink">ログアウト</a></p>
 				</div>
 			</div>
 
