--- a/settingRestTime/settingRestTime.phtml
+++ b/settingRestTime/settingRestTime.phtml
@@ -76,7 +76,7 @@ $data = $model->getRestTimeData();
 
 			<div class="box menu"><!-- ヘッダーメニュー-->
 				<ul id="dropmenu">
-	 				<li><a href="../mainMenu/mainMenu-admin.php">メニュー</a>
+	 				<li><a href="../mainMenu/mainMenu.php">メニュー</a>
 	   			 		<ul></ul>
 	 				</li>
 	  				<li><a href="../overallWorkTime/overallWorkTime.php">勤務時間表</a>
