--- a/settingRestTime/settingRestTime.phtml
+++ b/settingRestTime/settingRestTime.phtml
@@ -161,7 +161,7 @@ $data = $model->getRestTimeData();
 									<option value="00">00</option>
 									<option value="10">10</option>
 									<option value="20">20</option>
-									<option value="40">30</option>
+									<option value="30">30</option>
 									<option value="40">40</option>
 									<option value="50">50</option>
 							 </select>
@@ -181,7 +181,7 @@ $data = $model->getRestTimeData();
 									<option value="00">00</option>
 									<option value="10">10</option>
 									<option value="20">20</option>
-									<option value="40">30</option>
+									<option value="30">30</option>
 									<option value="40">40</option>
 									<option value="50">50</option>
 							 </select>
@@ -198,7 +198,7 @@ $data = $model->getRestTimeData();
 									<option value="00">00</option>
 									<option value="10">10</option>
 									<option value="20">20</option>
-									<option value="40">30</option>
+									<option value="30">30</option>
 									<option value="40">40</option>
 									<option value="50">50</option>
 							 </select>
@@ -226,7 +226,7 @@ $data = $model->getRestTimeData();
 									<option value="00">00</option>
 									<option value="10">10</option>
 									<option value="20">20</option>
-									<option value="40">30</option>
+									<option value="30">30</option>
 									<option value="40">40</option>
 									<option value="50">50</option>
 							 </select>
@@ -243,7 +243,7 @@ $data = $model->getRestTimeData();
 									<option value="00">00</option>
 									<option value="10">10</option>
 									<option value="20">20</option>
-									<option value="40">30</option>
+									<option value="30">30</option>
 									<option value="40">40</option>
 									<option value="50">50</option>
 							 </select>
@@ -263,7 +263,7 @@ $data = $model->getRestTimeData();
 									<option value="00">00</option>
 									<option value="10">10</option>
 									<option value="20">20</option>
-									<option value="40">30</option>
+									<option value="30">30</option>
 									<option value="40">40</option>
 									<option value="50">50</option>
 							 </select>
@@ -280,7 +280,7 @@ $data = $model->getRestTimeData();
 									<option value="00">00</option>
 									<option value="10">10</option>
 									<option value="20">20</option>
-									<option value="40">30</option>
+									<option value="30">30</option>
 									<option value="40">40</option>
 									<option value="50">50</option>
 							 </select>
@@ -308,13 +308,13 @@ $data = $model->getRestTimeData();
 									<option value="00">00</option>
 									<option value="10">10</option>
 									<option value="20">20</option>
-									<option value="40">30</option>
+									<option value="30">30</option>
 									<option value="40">40</option>
 									<option value="50">50</option>
 							 </select>
 							 分</p><br>
 						<p>セミナー :
-							<select name="seminarStartHour[]" id="seminerStartHour2">
+							<select name="seminarStartHour[]" id="seminarStartHour2">
 								<?php for($i=1; $i<=24; $i++){?>
 								<option value="<?=$i?>"><?=$i?></option>
 								<?php }?>
@@ -325,7 +325,7 @@ $data = $model->getRestTimeData();
 									<option value="00">00</option>
 									<option value="10">10</option>
 									<option value="20">20</option>
-									<option value="40">30</option>
+									<option value="30">30</option>
 									<option value="40">40</option>
 									<option value="50">50</option>
 							 </select>
@@ -345,7 +345,7 @@ $data = $model->getRestTimeData();
 									<option value="00">00</option>
 									<option value="10">10</option>
 									<option value="20">20</option>
-									<option value="40">30</option>
+									<option value="30">30</option>
 									<option value="40">40</option>
 									<option value="50">50</option>
 							 </select>
@@ -362,7 +362,7 @@ $data = $model->getRestTimeData();
 									<option value="00">00</option>
 									<option value="10">10</option>
 									<option value="20">20</option>
-									<option value="40">30</option>
+									<option value="30">30</option>
 									<option value="40">40</option>
 									<option value="50">50</option>
 							 </select>
@@ -390,7 +390,7 @@ $data = $model->getRestTimeData();
 									<option value="00">00</option>
 									<option value="10">10</option>
 									<option value="20">20</option>
-									<option value="40">30</option>
+									<option value="30">30</option>
 									<option value="40">40</option>
 									<option value="50">50</option>
 							 </select>
@@ -407,7 +407,7 @@ $data = $model->getRestTimeData();
 									<option value="00">00</option>
 									<option value="10">10</option>
 									<option value="20">20</option>
-									<option value="40">30</option>
+									<option value="30">30</option>
 									<option value="40">40</option>
 									<option value="50">50</option>
 							 </select>
@@ -427,7 +427,7 @@ $data = $model->getRestTimeData();
 									<option value="00">00</option>
 									<option value="10">10</option>
 									<option value="20">20</option>
-									<option value="40">30</option>
+									<option value="30">30</option>
 									<option value="40">40</option>
 									<option value="50">50</option>
 							 </select>
@@ -444,7 +444,7 @@ $data = $model->getRestTimeData();
 									<option value="00">00</option>
 									<option value="10">10</option>
 									<option value="20">20</option>
-									<option value="40">30</option>
+									<option value="30">30</option>
 									<option value="40">40</option>
 									<option value="50">50</option>
 							 </select>
@@ -472,7 +472,7 @@ $data = $model->getRestTimeData();
 									<option value="00">00</option>
 									<option value="10">10</option>
 									<option value="20">20</option>
-									<option value="40">30</option>
+									<option value="30">30</option>
 									<option value="40">40</option>
 									<option value="50">50</option>
 							 </select>
@@ -489,7 +489,7 @@ $data = $model->getRestTimeData();
 									<option value="00">00</option>
 									<option value="10">10</option>
 									<option value="20">20</option>
-									<option value="40">30</option>
+									<option value="30">30</option>
 									<option value="40">40</option>
 									<option value="50">50</option>
 							 </select>
@@ -509,7 +509,7 @@ $data = $model->getRestTimeData();
 									<option value="00">00</option>
 									<option value="10">10</option>
 									<option value="20">20</option>
-									<option value="40">30</option>
+									<option value="30">30</option>
 									<option value="40">40</option>
 									<option value="50">50</option>
 							 </select>
@@ -526,7 +526,7 @@ $data = $model->getRestTimeData();
 									<option value="00">00</option>
 									<option value="10">10</option>
 									<option value="20">20</option>
-									<option value="40">30</option>
+									<option value="30">30</option>
 									<option value="40">40</option>
 									<option value="50">50</option>
 							 </select>
@@ -554,7 +554,7 @@ $data = $model->getRestTimeData();
 									<option value="00">00</option>
 									<option value="10">10</option>
 									<option value="20">20</option>
-									<option value="40">30</option>
+									<option value="30">30</option>
 									<option value="40">40</option>
 									<option value="50">50</option>
 							 </select>
@@ -571,7 +571,7 @@ $data = $model->getRestTimeData();
 									<option value="00">00</option>
 									<option value="10">10</option>
 									<option value="20">20</option>
-									<option value="40">30</option>
+									<option value="30">30</option>
 									<option value="40">40</option>
 									<option value="50">50</option>
 							 </select>
@@ -591,7 +591,7 @@ $data = $model->getRestTimeData();
 									<option value="00">00</option>
 									<option value="10">10</option>
 									<option value="20">20</option>
-									<option value="40">30</option>
+									<option value="30">30</option>
 									<option value="40">40</option>
 									<option value="50">50</option>
 							 </select>
@@ -608,7 +608,7 @@ $data = $model->getRestTimeData();
 									<option value="00">00</option>
 									<option value="10">10</option>
 									<option value="20">20</option>
-									<option value="40">30</option>
+									<option value="30">30</option>
 									<option value="40">40</option>
 									<option value="50">50</option>
 							 </select>
@@ -636,7 +636,7 @@ $data = $model->getRestTimeData();
 									<option value="00">00</option>
 									<option value="10">10</option>
 									<option value="20">20</option>
-									<option value="40">30</option>
+									<option value="30">30</option>
 									<option value="40">40</option>
 									<option value="50">50</option>
 							 </select>
@@ -653,7 +653,7 @@ $data = $model->getRestTimeData();
 									<option value="00">00</option>
 									<option value="10">10</option>
 									<option value="20">20</option>
-									<option value="40">30</option>
+									<option value="30">30</option>
 									<option value="40">40</option>
 									<option value="50">50</option>
 							 </select>
