--- a/overallWorkTime/overallWorkTime.phtml
+++ b/overallWorkTime/overallWorkTime.phtml
@@ -160,7 +160,7 @@
 
 						<p>氏名
 							<select name="name">
-								<option value="1">Aさん</option>
+								<option value="1">全体</option>
 								<option value="2">Bさん</option>
 								<option value="3">Cさん</option>
 								<option value="4">Dさん</option>
@@ -174,7 +174,7 @@
 					</div>
 
 					<br>
-					<p>表示期間 : 20XX年X月XX日 ～ 20XX年X月XX日
+					<p>表示期間 : 2015年8月1日 ～ 2015年8月日
 					<br>
 
 					<div class="worksheet">
